--- a/app/assets/stylesheets/admin/page-applications.scss
+++ b/app/assets/stylesheets/admin/page-applications.scss
@@ -100,7 +100,7 @@
 
 .applications-table {
   .urn-not-generated {
-    color: $grey;
+    color: $grey-dark;
     font-style: italic;
   }
 
@@ -111,6 +111,11 @@
   > thead > tr > th {
     border-top: none;
   }
+
+  td > a {
+    color: $blue-link-colour;
+  }
+
 }
 
 .nav-tabs.submitted-tabs {
