--- a/app/assets/stylesheets/admin/page-settings.scss
+++ b/app/assets/stylesheets/admin/page-settings.scss
@@ -183,7 +183,7 @@
 
       input[type="submit"] {
         text-align: center;
-        color: $govuk-link-colour;
+        color: $blue-link-colour;
         background: none;
         padding: 0;
         border: none;
